# NToys

./: README.md  index.html  launcher.html  package-lock.json  package.json  update.json  vite.config.js
src/: App.vue  Launcher.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/runner/: icon.rs  launcher.rs  mod.rs  settings.rs
src-tauri/src/settings/: settings.rs
src-tauri/src/vpn/: mod.rs  proxy.rs  subscription.rs  v2ray.rs
src/components/: Sidebar.vue
src/components/launcher/: Launcher.vue  launcher.js
src/components/settingcomponents/: RangeSlider.vue  ShortcutInput.vue
src/components/settings/: SettingsController.vue  settingsRegistry.js
src/components/settings/components/: RangeSlider.vue  ShortcutInput.vue  ToggleSwitch.vue  UpdateCheck.vue
src/components/view/: AboutModal.vue  GlobalSettings.vue  HomeView.vue  MusicView.vue  RunnerSettings.vue  SettingView.vue  VpnView.vue
src/css/: fonts.css  music.css
src/scripts/: music.js  updater.js  useMediaSession.js  useRafIdle.js  weather.js
